examples/tree/artifacts/tests/asm_too_many_accounts/result.txt
test tests::test_asm_too_many_accounts ... ok
warning: constant `CPI_N_ACCOUNTS` is never used
  --> tree/interface/src/asm.rs:71:7
   |
71 | const CPI_N_ACCOUNTS: usize = 2;
   |       ^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default
warning: constant `CPI_N_PDA_SIGNERS` is never used
  --> tree/interface/src/asm.rs:73:7
   |
73 | const CPI_N_PDA_SIGNERS: usize = 1;
   |       ^^^^^^^^^^^^^^^^^
warning: constant `CPI_N_SEEDS` is never used
  --> tree/interface/src/asm.rs:75:7
   |
75 | const CPI_N_SEEDS: usize = 1;
   |       ^^^^^^^^^^^
warning: struct `InitStackFrame` is never constructed
  --> tree/interface/src/asm.rs:78:8
   |
78 | struct InitStackFrame {
   |        ^^^^^^^^^^^^^^
warning: struct `SolInstruction` is never constructed
 --> tree/interface/src/bindings.rs:7:12
  |
7 | pub struct SolInstruction {
  |            ^^^^^^^^^^^^^^
warning: struct `SolAccountMeta` is never constructed
  --> tree/interface/src/bindings.rs:23:12
   |
23 | pub struct SolAccountMeta {
   |            ^^^^^^^^^^^^^^
warning: struct `SolAccountInfo` is never constructed
  --> tree/interface/src/bindings.rs:35:12
   |
35 | pub struct SolAccountInfo {
   |            ^^^^^^^^^^^^^^
warning: struct `SolSignerSeed` is never constructed
  --> tree/interface/src/bindings.rs:59:12
   |
59 | pub struct SolSignerSeed {
   |            ^^^^^^^^^^^^^
warning: struct `SolSignerSeeds` is never constructed
  --> tree/interface/src/bindings.rs:69:12
   |
69 | pub struct SolSignerSeeds {
   |            ^^^^^^^^^^^^^^
warning: struct `Return` is never constructed
  --> tree/interface/src/common.rs:27:8
   |
27 | struct Return {
   |        ^^^^^^
warning: struct `CreateAccountInstructionData` is never constructed
  --> tree/interface/src/common.rs:36:12
   |
36 | pub struct CreateAccountInstructionData {
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
warning: `interface` (lib) generated 11 warnings
warning: `interface` (lib) generated 11 warnings (11 duplicates)
warning: unused variable: `bump`
  --> tree/src/program.rs:45:32
   |
45 |             let (expected_pda, bump) = Address::find_program_address(&[], program_id);
   |                                ^^^^ help: if this is intentional, prefix it with an underscore: `_bump`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
warning: `tree` (lib test) generated 1 warning
[ ... DEBUG ... ] Program DASMAC... invoke [1]
[ ... DEBUG ... ] Program DASMAC... consumed 5 of 1400000 compute units
[ ... DEBUG ... ] Program DASMAC... failed: custom program error: 0x1